test/invalid/fc36956_SubtypingCyclesIndirectly/Beta.plume
/**
 * Beta.plume
 *
 * Test: a class cannot extend itself indirectly
 * Beta extends Alfa extends Beta
 * @author Carlos Mao de Ferro
 * @version $Id: Beta.plume 286 2012-05-01 10:24:19Z tcomp000 $
 */
class Beta extends Alfa is
	field x : Integer